--- a/21_10_24_Project2_ColdCallingApp/app/src/main/res/layout/activity_called_log.xml
+++ b/21_10_24_Project2_ColdCallingApp/app/src/main/res/layout/activity_called_log.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Uncalled Students"
+        android:text="Called Students"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
